--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@
   -o-object-fit: cover;
      object-fit: cover;
   z-index: 0;
-  background-image: url(/assets/bg.svg);
+  background-image: url(./assets/bg.svg);
   width: 100%;
   height: 100%;
 }
